tests/single_instruction_translation_validation/mcsema/register-variants-samereg/cvtpd2ps_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:197:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %11)
            ^
0.03user 0.02system 0:00.08elapsed 72%CPU (0avgtext+0avgdata 27540maxresident)k
0inputs+16outputs (0major+3287minor)pagefaults 0swaps
